# cloud-service-integration-with-MCP

./: .env.example  .gitignore  AWS_SETUP_GUIDE.md  COMPREHENSIVE_PROJECT_EXPLANATION.txt  Makefile  PRESENTATION_AND_DEMO_GUIDE.txt  PROJECT_SUMMARY.txt  README.md  SAMPLE_OUTPUT.md  docker-compose.yml  problem-statement.txt  pyproject.toml  pytest.ini  requirements.txt  test_output_utf8.txt
cloud_service_integration_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker/: Dockerfile.mcp  Dockerfile.orchestrator
observability/: prometheus.yml
observability/grafana/dashboards/: orchestrator.json
observability/grafana/provisioning/datasources/: datasource.yml
phase-0-foundations/: README.md
phase-0-foundations/ci-cd/.github/workflows/: ci.yml
phase-0-foundations/observability/: otel-collector-config.yaml
phase-0-foundations/terraform/aws/: main.tf
phase-1-mcp-core/: README.md
phase-1-mcp-core/servers/aws/: aws_server.py
phase-2-langgraph-orchestrator/: README.md  agents.py  state.py
phase-3-model-serving/: README.md  canary_controller.py
phase-3-model-serving/k8s/base/kserve/: inference-service.yaml
phase-4-cost-resilience/: README.md  cost_optimizer.py
phase-5-security-compliance/: README.md
phase-5-security-compliance/policies/: mcp_policy.rego
phase-6-production-dr/: README.md
phase-6-production-dr/runbooks/: disaster_recovery.md
phase-7-rollout/: README.md
phase_1_mcp_core/: __init__.py
phase_1_mcp_core/servers/: __init__.py  base_server.py
phase_1_mcp_core/servers/aws/: __init__.py  aws_server.py
phase_1_mcp_core/servers/azure/: __init__.py  azure_server.py
phase_1_mcp_core/servers/gcp/: __init__.py  gcp_server.py
phase_2_langgraph_orchestrator/: __init__.py  __main__.py  agents.py  workflow.py
phase_3_model_serving/: __init__.py
phase_4_cost_resilience/: __init__.py  cost_optimizer.py
phase_5_security_compliance/: __init__.py  policy_enforcer.py
scripts/: init-db.sql  mcp_debug_client.py  run_debug_stack.py  test_gemini_ipv4.py  test_orchestrator_connection.py
shared/: __init__.py  config.py
tests/: __init__.py
tests/e2e/: test_workflows.py
tests/integration/: test_mcp_servers.py
tests/unit/: test_components.py
