[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-service-integration-mcp"
version = "1.0.0"
description = "Multi-cloud AI orchestration platform using MCP and LangGraph"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cloud Platform Team", email = "platform@example.com"}
]
keywords = ["mcp", "langgraph", "cloud", "orchestration", "ai", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "boto3>=1.34.0",
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-containerservice>=28.0.0",
    "azure-ai-ml>=1.12.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-mgmt-network>=25.0.0",
    "google-cloud-compute>=1.14.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-container>=2.38.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-secret-manager>=2.18.0",
    "asyncpg>=0.29.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.0.26",
    "kubernetes>=29.0.0",
    "prometheus-api-client>=0.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
]

[project.urls]
Homepage = "https://github.com/example/cloud-service-integration-mcp"
Documentation = "https://github.com/example/cloud-service-integration-mcp#readme"
Repository = "https://github.com/example/cloud-service-integration-mcp"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "phase_1_mcp_core*",
    "phase_2_langgraph_orchestrator*",
    "phase_3_model_serving*",
    "phase_4_cost_resilience*",
    "phase_5_security_compliance*",
    "shared*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.isort]
profile = "black"
line_length = 100
